// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`can introspect schema from url 1`] = `
"union Battle = BattleRoyale | BattleTrainer | BattleWild

type BattleRoyale {
  combatants: [CombatantMultiPokemon!]
  date: Float
  id: ID
  winner: Trainer
}

type BattleTrainer {
  combatant1: CombatantSinglePokemon
  combatant2: CombatantSinglePokemon
  date: Float
  id: ID
  winner: Trainer
}

type BattleWild {
  date: Float
  id: ID
  pokemon: Pokemon
  result: BattleWildResult
  trainer: Trainer
  wildPokemons: [Pokemon!]
}

enum BattleWildResult {
  pokemonsCaptured
  pokemonsDefeated
  trainerDefeated
}

interface Being {
  id: ID
  name: String
}

type CombatantMultiPokemon {
  pokemons: [Pokemon!]
  trainer: Trainer
}

type CombatantSinglePokemon {
  pokemon: Pokemon
  trainer: Trainer
}

input DateFilter {
  gte: Float
  lte: Float
}

type Mutation {
  addPokemon(attack: Int, defense: Int, hp: Int, name: String!, type: PokemonType!): Pokemon
}

type Patron implements Being {
  id: ID
  money: Int
  name: String
}

type Pokemon implements Being {
  attack: Int
  birthday: Int
  defense: Int
  hp: Int
  id: ID
  name: String
  trainer: Trainer
  type: PokemonType
}

input PokemonFilter {
  birthday: DateFilter
  name: StringFilter
}

enum PokemonType {
  bug
  electric
  fire
  grass
  water
}

type Query {
  battles: [Battle!]!
  beings: [Being!]!
  pokemon: [Pokemon!]
  pokemonByName(name: String!): [Pokemon!]
  pokemons(filter: PokemonFilter): [Pokemon!]
  trainerByName(name: String!): Trainer
  trainers: [Trainer!]
}

input StringFilter {
  contains: String
  in: [String!]
}

type Trainer implements Being {
  class: TrainerClass
  fans: [Patron!]
  id: ID
  name: String
  pokemon: [Pokemon!]
}

enum TrainerClass {
  bugCatcher
  camper
  picnicker
  psychic
  psychicMedium
  psychicYoungster
  sailor
  superNerd
  tamer
  teamRocketGrunt
  triathlete
  youngster
  youth
}"
`;

exports[`can load schema from custom dir using default file name 1`] = `
"type Query {
	defaultNamedSchemaFile: Boolean
}
"
`;

exports[`can load schema from custom path 1`] = `
"type Query {
	customNamedSchemaFile: Boolean
}
"
`;
